--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Courses#new</h1>
-<p>Find me in app/views/courses/new.html.erb</p>
+<h1>Add Course</h1>
+
+<%= form_with(model: @course, local: true, class: "ui form") do |f| %>
+    <div class="field">
+        <%= f.label :name %>
+        <%= f.text_field :name, required: true, placeholder: "Course Name", autofocus: true %>
+    </div>
+    <%= f.submit nil, class: "ui blue button inverted" %>
+<% end %>
