--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Enrollments#index</h1>
-<p>Find me in app/views/enrollments/index.html.erb</p>
+<h1><%= @course.name %>: Enrollments</h1>
+<%= link_to 'Add Enrollment', new_course_enrollment_path(@course) %>
+<hr />
+<h2>Teachers</h2>
+<%= @teachers.length <= 0 ? "No teachers enrolled":nil %>
+<ul>
+    <% @teachers.each do |teacher| %>
+        <li>
+        <%= teacher.user.full_name %>
+        <br />
+        <%= link_to 'Remove', course_enrollment_path(@course, teacher), method: :delete %>
+        </li>
+    <% end %>
+</ul>
+
+<h2>Teaching Assistants</h2>
+<%= @tas.length <= 0 ? "No teaching assistants enrolled":nil %>
+<ul>
+    <% @tas.each do |ta| %>
+        <li>
+        <%= ta.user.full_name %>
+        <br />
+        <%= link_to 'Remove', course_enrollment_path(@course, ta), method: :delete %>
+        </li>
+    <% end %>
+</ul>
+
+<h2>Students</h2>
+<%= @students.length <= 0 ? "No students enrolled":nil %>
+<ul>
+    <% @students.each do |student| %>
+        <li>
+        <%= student.user.full_name %>
+        <br />
+        <%= link_to 'Remove', course_enrollment_path(@course, student), method: :delete %>
+        </li>
+    <% end %>
+</ul>
